--- a/03-GitHub.Rmd
+++ b/03-GitHub.Rmd
@@ -1,11 +1,29 @@
 # GitHub & GitHub Pages
-## Sharing on GitHub
-### Via direct file upload
 Github is great for project collaboration, backup and version control.
-To use github as your repository manager; 
+To use github as your repository manager, Create an account at (https://github.com/). 
 
-1. Create an account at (https://github.com/). 
-2. Create a repository for your files. Click on the plus sign + located at the top right corner of your github account page. 
+## Sharing Repositories on GitHub
+### Via GitHub Desktop
+1. Open GitHub desktop on your pc/laptop  
+2. On the main menu, click on `File` and select `Add local repository` from the dropdown list
+![add repository](tutorial_screenshots/gh_desktop_add_repo.png)  
+3. Browse to your your repository is sitting in your pc, select it and click `Add Repository'
+4. A list of all your files and sub-directories appears from which you may select and deselect what you want to publish to GitHub.
+5. Enter a commit message on the 'Summary' text-box right below your listed files and optionally a brief description.
+![commit](tutorial_screenshots/gh_desktop_commit.png)
+
+6. Hit 'Commit to master'
+7. To the right of the GitHub desktop window, the app will notify you that this repository is only available on your local machine and if you would like to share/publish it to GitHub. Click on publish repository 
+![Publish new repo](tutorial_screenshots/gh_desktop_publish_repo.png)
+8. Uncheck the box for ‘keep the repository private’ and Click Publish repository
+![uncheck private](tutorial_screenshots/gh_desktop_uncheck_private.png)
+9. From the menu bar on GitHub desktop, click on `Repository` and select `Push` from the dropdown list.
+10. Congratulations, you just published your repository to GitHub  
+
+### Via direct file upload
+
+1. Log in to your GitHub.com account 
+2. Click on the plus sign + located at the top right corner of your github account page. 
 ![open github repo](tutorial_screenshots/gh_create_repo.png)
 3. Click on 'New Repository' from the drop-down menu.  
 4. On the new window that appears, give the repository a name: NAPBook_Tutorial  
