--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,6 +1,6 @@
 # Getting started 
-## About rmarkdown
-R markdown is a file document that allows you to write, save and execute code, as well as text and figures to help generate reproducible reports that can be shared in several formats. 
+## About RMarkdown
+RMarkdown is a file document that allows you to write, save and execute code, as well as text and figures to help generate reproducible reports that can be shared in several formats. 
 The file extension is .rmd.  
 A markdown file has three main sections;  
 
@@ -37,58 +37,63 @@ Alternatively, you may use single underscore _for italics_ or double underscore 
 #### Ordered list
 Use numbers to order your list items.
 and a plus sign '+' to create sub-items on your list. 
-
-1. List item 1  
-2. List item 2  
-  + Sub-item 1  
-  + Sub-item 2  
-+ Sub-item 3  
-3. List item 3  
+![ordered list](tutorial_screenshots/ordered_list.png)
 
 #### Unordered list
 Use an asterisk '*' before list item to create an unordered list.  
 Use a plus '+' sign for sub-items.  
-Use tab command or two spaces on your keyboard to indent the list items
+Use tab command or two spaces on your keyboard to indent the list items   
 
-* List item
-* List item
-    + Sub-item
-    + Sub-item
-        + Sub-sub item
-* List item
+![unodered list](tutorial_screenshots/unordered_list.png)
+
 
 ### Manual line breaks
 Use two or more spaces at the end of a line    
 to insert a line break
 
 ### Insert links
-You may insert a link using the plain http address such as https://rmarkdown.rstudio.com/ or insert it as a linked phrase using square brackets and parenthesis such as [our link phrase goes here](https://rmarkdown.rstudio.com/).
+You may insert a link using the plain http address such as https://rmarkdown.rstudio.com/ or insert it as a linked phrase using square brackets and parenthesis such as in screenshot
+
+![linked phrase](tutorial_screenshots/link_phrase.png)   
+
+to produce this:
+
+[our link phrase goes here](https://rmarkdown.rstudio.com/).
 
 ### Insert figures/images
 To insert images to our document, we use the same syntax as links, but start with an exclamation mark'!' before syntax.
 For an image from a url use; `![text to accompany your image e.g a caption](your https link)`  
 or for an image file in your local directory use, `![your image text](path to local image file)`.  
 For instance, I downloaded the UN Climate logo and saved it as a .jpg in my working directory as exact name `unfccc_logo.jpg` 
-The following syntax will insert the logo into my document: 
-`![UN Climate logo](unfccc_logo.jpg)`. However, this draws the logo on entire page width. Therefore to specify the  drawing width of the image  to x inches, we add the the command '{width=xin}` at the end. ![UN Climate logo](unfccc_logo.jpg){width=1in}   
+The following syntax will insert the logo into my document:   
 
-__When inserting images from local file, it is strongly recommended to have the file in your working directory.__
+![insert image](tutorial_screenshots/insert_image.png)
+
+
+![UN Climate logo](unfccc_logo.jpg)   
+
+__When inserting images from local file, it is strongly recommended to have the image in your working directory.__
 
 ### Insert block quotes
-To insert a block quote within your text, use the greater than sign '>' in the beginning of quote. The quote must begin on a new line, and remember to insert blank line before and after. For instance;
+To insert a block quote within your text, use the greater than sign '>' in the beginning of quote. The quote must begin on a new line, and remember to insert blank line before and after. For instance the screenshot below;  
 
-> This exercise may seem complicated at first,
-> but trust me, it is not. You will agree with me sooner than later :)
+![block quote](tutorial_screenshots/block_quote.png)
+
+produces this: 
+
+> This exercise may seem complicated at first, but trust me, it is not.   
+> You will agree with me sooner than later :)
 
 ### Insert code chunks
 To write your code use  open code chunk with three backticks 
-and the curly brackets {insert your code language}, hit enter on your keyboard, insert your code and hit enter, close the code chunk with another three backticks.  
-For code in r language;
+and the curly brackets {insert your code language}, hit enter on your keyboard, insert your code and hit enter, close the code chunk with another three backticks.   
+![insert code chunk](tutorial_screenshots/code_chunk.png)
 
-```{r}
-# your code here
-```
+Alternatively, you may do it from top right corner of your script/source window as shown below. 
+Click on the green +c icon and select R from the drop down list.
 
+![code chunk by click](tutorial_screenshots/code_chunk2.png)
+_Code chunks for other languages may be added from this list as well._
 
 ### Create tables
 #### Option 1
@@ -96,7 +101,9 @@ Create table headers with dashed lines below the header title. Separate headers 
 Type in row values below the dashed lines. The row value length may exceed the dashed line length but MUST not extend into the next header's dashed line.  
 **Column alignment is based on the position of the header/column title relative to the dashed line below it.**   
 To insert a caption or alt text to your table use, full colon ':' followed by your caption text at the end of the table.  
-Alternatively, use 'Table: your caption or text'.
+Alternatively, use 'Table: your caption or text'. The following syntax (screenshot) produces the ensuing table.
+
+![manual table](tutorial_screenshots/typed_table.png)
 
 
   Header 1    Header 2    Header 3       Header 4
@@ -114,9 +121,11 @@ You may also create simple tables using a `knitr` function called `kable`.
 The code below tells r that we want to create a data set with 3 columns, X, Y & Z, assigning them the values enclosed in the letter c. The letter c used together with brackets indicates a list of elements. Thus, in the example below, we tell r that our column X, will contain a list of 4 elements i.e 20, 30, 10 & 50.  
 Then we tell r to create the data set by combining all the columns X, Y & Z into a data frame.
 Finally, we call the function `kable` and enter the data we created. This function converts or data frame into a table format.  
-Optionally, you may add a caption to the table and specify cell alignment.  
+Optionally, you may add a caption to the table and specify cell alignment. 
 
-```{r kable, fig.cap= "My first simple table with kable"}
+![kable table](tutorial_screenshots/kable_table.png)
+
+```{r kable,echo=FALSE, fig.cap= "My first simple table with kable"}
 X<-c(20,30,10, 50)    # create variable X
 Y<-c(1.4, 4.3,5.9,2.7)    # create variable Y
 Z<-c("yes","no","true","false")   # create variable Z
@@ -124,22 +133,21 @@ mydata<-data.frame(X,Y,Z) # combine variables into table format
 knitr::kable(mydata, caption = "My first simple table with kable", align = 'c') # plot table with kable
 ```
 
-__Note that our code chunk is labelled 'kable'. You can label code chunks as in the brackets below__
+__Note that our code chunk is labelled 'kable'. You can label code chunks as below__
+
+![labled chunk](tutorial_screenshots/chunk_name.png)
 
 
-(open chunk ```{r your chunk name}  
+This will be useful for cross-referencing as we'll see in the [Chapter References] section.
 
-your code  
-
-  close code chunk with ```)   
-
-This will be useful for cross-referencing.  
-
-### Page breaks
+### Page breaks  
 Use three or more asterisks or dashes to insert a page break.   
+
+![page break](tutorial_screenshots/page_break.png)
+
+
 _Remember to add a blank line before the asterisks or dashes_
 
-----
 
 ### Process a markdown document to desired output
 To create the desired output file document from the markdown format, use the function `render ("your .rmd file name)`.  
@@ -151,31 +159,29 @@ When a document is rendered, rmarkdown saves the results/output file into your w
 #### Citations/Bibliography
 To add citations to our document, we need to add our reference document details to a text file saved in the .bib format e.g myrefences.bib. We also need to add this file to our bibliography parameter in the yaml section of the index.rmd file.  
 The references for this exercise are saved in the file 'book.bib'.   
-To add your reference documents to the .bib file, use the BibTeX citation style i.e  
+To add your reference documents to the .bib file, use the BibTeX citation style i.e   
 
-> @documentype{documentname,  
-  title={document title},  
-  author={author name(s)},  
-  year={publication year},  
-  publisher={publisher name},  
-  url={document url}  
-}  
+![citations](tutorial_screenshots/citations.png)
 
 Sites such as [Google Scholar](https://scholar.google.com/) have ready to use/ formatted bibliography styles such as BibTeX, EndNote etc. You may copy-paste the BibTeX text into your .bib file in r.
 
 You may have as many documents listed in the .bib file but rmarkdown will only include those that have been referenced within your markdown document.  
 To reference documents in your narrative and thus, have them included in the reference section, use the format `[@documentname]`.     
-For instance, [@xie2015] and [@team2013r]  are the only references in my book.bib file.  
 The references will appear at the end of the chapter where they are referenced, as well as in the overall 'References' section.
 
 #### Chapter References
-To reference chapter, type in the chapter title inside square brackets. For instance, this command references our first chapter [Prerequisites].  
-The same applies to section headers. Just type [section header name] e.g [Page breaks].
+To reference chapter, type in the chapter title inside square brackets. For instance, this command references our second chapter named NAPdown.  
+![chapter ref](tutorial_screenshots/ref_chapters_sections.png)
+
+The same applies to section headers. Just type [section header name].
 
 #### Table & Figure  References
-To reference figures use syntax \@ref(fig:code chunk label) or \@ref(tab:code chunk label) for tables. 
-For instance, we created our kable table in the code chunk named kable. To reference this table anywhere in our document, just type in command \@ref(tab:kable).   
-This will insert a reference link to table \@ref(tab:kable).  
+To reference figures use syntax '\@ref(fig:code chunk label)' or'\@ref(tab:code chunk label)' for tables. 
+For instance, we created our kable table in the code chunk named kable. To reference this table anywhere in our document, just type in command 
+
+![Ref table](tutorial_screenshots/ref_table.png)
+
+This will insert a reference link to the kable table.   
 
 ### Pandoc & Knitr
 `Pandoc` is a universal document converter designed to convert thousands of markup languages. So when we create our document in markdown and want to output it as a pdf, pandoc does the work.   
