--- a/03-GitHub.Rmd
+++ b/03-GitHub.Rmd
@@ -15,7 +15,7 @@ To use github as your repository manager, Create an account at (https://github.c
 6. Hit 'Commit to master'
 7. To the right of the GitHub desktop window, the app will notify you that this repository is only available on your local machine and if you would like to share/publish it to GitHub. Click on publish repository 
 ![Publish new repo](tutorial_screenshots/gh_desktop_publish_repo.png)
-8. Uncheck the box for ‘keep the repository private’ and Click Publish repository
+8. Uncheck the box for ‘keep the code private’ and Click `Publish repository`
 ![uncheck private](tutorial_screenshots/gh_desktop_uncheck_private.png)
 9. From the menu bar on GitHub desktop, click on `Repository` and select `Push` from the dropdown list.
 10. Congratulations, you just published your repository to GitHub  
@@ -41,8 +41,8 @@ This will take you to a new window, from which you can drag-&-drop or browse to 
 Your files will start loading. Give it a minute or so.  
 If you scroll through the files you will notice that our 'docs' folder is missing. Do not worry!  
 12. To add the folder, lets use the drag and drop method. From your file explorer, navigate to our NAPBook_tutorial folder, and click once on the 'docs' folder to select it.  
-13. Drag and drop this folder into your github repository. The files should start uploading.     
-14.. After your files finish uploading, scroll down to the 'Commit changes' field; here you may enter a short description for your files. Let's enter the text 'our first NAP book commit'  
+13. Drag and drop this folder into your github repository. The files should start uploading.       
+14. After your files finish uploading, scroll down to the 'Commit changes' field; here you may enter a short description for your files. Let's enter the text 'our first NAP book commit'  
 When making changes to your files, you may use this field to briefly describe what changes you made, otherwise commonly known as commits.  
 6. Next, hit the 'Commit changes' button at the end. This is called commiting.  
 
@@ -78,25 +78,22 @@ Github pages helps you to create/publish websites in very simple steps.
 We will publish the NAP book we just created with bookdown into a git-based website.
 To do this,  
 
-1. From the github repository you created in last step, click on the Settings tab (right side of your screen)  
-2. Scroll down the listed menu items on the left side of the screen until you find menu item 'Pages'. Click on it.  
+1.In your github repository, click on the `Settings` tab (right side of your screen)  
+2. Scroll down the listed menu items on the left side of the screen until you find menu item `Pages`. Click on it.  
 ![gh_pages](tutorial_screenshots/gh_pages_setup.png)
 3. Scroll down to the 'Source' field. Click on the drop-down arrow and select the __main/master__ branch and __docs__ folder as your source files for your website. Click Save.   
-3. Next, on the 'Theme Chooser' field, click to choose a theme for your website.  
-A page similar to this appears. ![choose theme](tutorial_screenshots/gh_pages_theme.png)  
-
-You may scroll through to see the options. For this case, lets select the first theme 'Cayman'.  
-
-4. Once a theme is selected, a message with a link to your website appears just above your 'Source' field.   
+A message with a link to your website will appear, right above the `Source` field. 
 
 > Your site is ready to be published at https://yourusername.github.io/repositoryname/
 
-or as seen here ![gh pages link](tutorial_screenshots/gh_pageslink.png)  
+or as seen here ![gh pages link](tutorial_screenshots/gh_pageslink.png) 
 
-Use this link to view your newly created website.  
-Alternatively, navigate back to your main repository area, scroll down to your right to find your active 'github-pages'. Click to view your website deployments.  
+Use this link to view your newly created website. 
+
+4. Alternatively, navigate back to your main repository area, scroll down to your right to find your active `github-pages`. Click to view your website deployments.  
 
 ![gh pages deployment](tutorial_screenshots/gh_pages_deploy.png)  
+
 
 
 __Now give yourself a pat on the back!__
